bug: fixed bug of project links overflowing project section on mobile devices and settings dialog shrinking with screen size

--- a/style.css
+++ b/style.css
@@ -226,7 +226,6 @@ header {
     idv-project {
         display: flex;
         flex-direction: column;
-        align-items: left;
         width: 90%;
         max-width: 700px;
         background-color: var(--bar-color);
@@ -243,7 +242,6 @@ header {
 
     idv-project img {
         width: 100%;
-        max-width: 320px;
         border-radius: 8px;
         margin-bottom: 1rem;
         border: 1px solid var(--border-color);
@@ -257,9 +255,14 @@ header {
         max-width: 100%;
     }
 
+    idv-project .skills {
+        text-align: left;
+    }
+
     idv-project a {
         color: var(--text--color);
         text-decoration: none;
+        word-break: break-all;
     }
 
     idv-project a:hover {
@@ -345,7 +348,7 @@ footer {
     border: 1px solid var(--border-color);
     border-radius: 10px;
     padding: 1rem;
-    width: 20vw;
+    width: 15rem;
     background-color: var(--background-color);
     box-shadow: 10px 10px 50px var(--shadow-color);
 
@@ -401,8 +404,8 @@ footer {
         position: absolute;
         width: 21px;
         height: 21px;
-        left: 0px;
-        top: 1px;
+        left: 0.5px;
+        top: 0.5px;
         background-color: var(--text-color);
         border-radius: 50%;
         transition: transform 0.3s;
